# altair-sessions-ms

./: .env  .gitignore  .gitleaks.toml  Cargo.toml  Dockerfile  README.md  requests.http
.github/workflows/: cd.yml  ci.yml
migrations/: 20260413130000_add_lab_session_runtimes.sql  20260501190000_staff_ai_activity_analysis.sql
src/: error.rs  main.rs  state.rs
src/middleware/: fake_auth.rs  mod.rs
src/models/: api.rs  auth.rs  lab_progress.rs  learner_lab_status.rs  mod.rs  session.rs  staff_analysis.rs
src/routes/: health.rs  internal.rs  labs.rs  metrics.rs  mod.rs  sessions.rs  staff.rs
src/services/: extractor.rs  labs_client.rs  mod.rs  sessions_service.rs
src/services/sessions_service/: staff_ai_activity_event_recording.rs  staff_ai_activity_metrics.rs  staff_ai_analysis_generation.rs  staff_ai_group_access_checks.rs  staff_ai_terminal_event_ingestion.rs
src/tests/: health_test.rs  sessions_smoke_test.rs
