[package]
name = "altair-sessions-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }